[package]
name = "cmark2jira"
version = "0.1.0"
authors = ["Brandur <brandur@mutelight.org>"]

description = "Translate good CommonMark into bad JIRA markup for anyone locked into Atlassian's prison of bad software."
license = "MIT"
readme = "README.md"

[dependencies]
pulldown-cmark = { version = "0.0.15", default-features = false }
